[package]
name = "version-number"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Two and three component 'major.minor' and 'major.minor.patch' version number parsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/version-number"

version = "0.2.1"
edition = "2018"

keywords = ["version", "semver", "version-core", "semver-shorthand", "rust-version"]
categories = ["parser-implementations"]

[package.metadata]
msrv = "1.43.1"

[dependencies]
thiserror = "1"

[dev-dependencies]
yare = "1"
