[package]
name = "version-number"
authors = ["Martijn Gribnau <garm@ilumeo.com>"]
description = "Two and three component 'major.minor' and 'major.minor.patch' version number parsing"
license = "MIT OR Apache-2.0"
repository = "https://github.com/foresterre/version-number"

version = "0.4.0"
edition = "2018"

keywords = ["version", "semver", "version-core", "semver-shorthand", "rust-version"]
categories = ["parser-implementations"]

rust-version = "1.56"

[package.metadata]
release.tag-name = "v{{version}}"

[dependencies]
semver = { version = "1", optional = true }
thiserror = "1"

[dev-dependencies]
yare = "1"
criterion = "0.5"

[lib]
bench = false

[[bench]]
name = "modular"
harness = false
